--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,12 +7,16 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    i{
+        padding-right: 10px;
+    }
 
 
 }
 
 .footer__links {
     list-style: none;
+    
 
     display: flex;
     flex-direction: column;
