--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -7,3 +7,48 @@
     padding-top: 20px;
     padding-bottom: 10px;
 }
+
+
+
+.header-menu{
+
+    background-color: $color-gray;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+   
+    
+    a:link{
+        color: black;
+        text-decoration: none;
+       
+
+    }
+    a:visited{
+        color: black;
+
+    }
+
+    i{
+      
+        padding-right: 50px;
+        font-size: 25px;
+    }
+    img{
+        @include area-shadow;
+        border-radius: 20px;
+        height: 330px;
+        width: 100%;
+      
+      
+        @include large-screen{
+           
+           width: 700px;
+        }
+    }
+    @include large-screen{
+        height: 475px;
+        background: linear-gradient(to bottom right, $color-secondary, $color-primary);
+    }
+}
