--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background: linear-gradient(to bottom, white, $color-gray);
 
    
     
