--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,8 +1,8 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
-$color-gray:  rgb(240, 236, 236);
+$color-gray: #f6f6f6 ;
 
 $color-primary-dark: darken($color-primary, 10%);
 $color-secondary-dark: darken($color-secondary, 10%);
-$color-gray-dark: darken($color-gray, 5%);
+$color-gray-dark: #eaeaea;
