--- a/css/prefixed/style.css
+++ b/css/prefixed/style.css
@@ -125,13 +125,14 @@ html {
 }
 
 .menu-area {
+  padding-left: 15px;
   display: flex;
   height: 470px;
   width: 100%;
   min-width: 350px;
   flex-direction: column;
   align-items: center;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
   align-items: flex-start;
   justify-content: flex-start;
   justify-self: flex-start;
@@ -144,8 +145,8 @@ html {
 .menu-area__fade {
   z-index: 2;
   position: absolute;
-  width: 107%;
-  background-color: #f0ecec;
+  width: 100%;
+  background-color: #f6f6f6;
   height: 104%;
   right: -3px;
   animation: fade-in 1.5s 0.7s;
@@ -181,7 +182,7 @@ html {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: #f0ecec;
+    background-color: #f6f6f6;
   }
 }
 .menu-area h3 {
@@ -208,8 +209,8 @@ html {
   box-shadow: 0px 5px 15px 5px #bbbbbb;
   padding-top: 8px;
   padding-left: 10px;
-  width: 350px;
-  height: 75px;
+  width: 330px;
+  height: 70px;
   border-radius: 15px;
 }
 .food-card h4 {
@@ -248,7 +249,7 @@ html {
   width: 30px;
   position: relative;
   bottom: 19px;
-  left: 290px;
+  left: 270px;
   white-space: nowrap;
   font-size: 14px;
 }
@@ -261,7 +262,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 85px;
+  width: 65px;
   height: 75px;
   position: relative;
   bottom: 105px;
@@ -276,7 +277,7 @@ html {
   justify-content: center;
   width: 35px;
   height: 35px;
-  font-size: 20px;
+  font-size: 12px;
   background-color: white;
 }
 @keyframes spin {
@@ -286,7 +287,7 @@ html {
 }
 
 .header {
-  font-size: 35px;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -298,7 +299,7 @@ html {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background: linear-gradient(to bottom, white, #f0ecec);
+  background: linear-gradient(to bottom, white, #f6f6f6);
 }
 .header-menu a:link {
   color: black;
@@ -316,6 +317,7 @@ html {
   border-radius: 20px;
   height: 330px;
   width: 100%;
+  object-fit: cover;
 }
 @media screen and (min-width: 768px) {
   .header-menu img {
@@ -339,7 +341,12 @@ footer {
   flex-direction: column;
   gap: 20px;
 }
+footer h2 {
+  font-weight: normal;
+}
 footer i {
+  width: 23px;
+  font-size: 12px;
   padding-right: 10px;
 }
 
@@ -425,7 +432,7 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
   height: 350px;
 }
 @media screen and (min-width: 768px) {
@@ -435,7 +442,7 @@ main {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: #f0ecec;
+    background-color: #f6f6f6;
   }
 }
 @media screen and (min-width: 768px) {
@@ -452,7 +459,7 @@ main {
   bottom: 2px;
   justify-content: center;
   align-items: center;
-  background-color: #e5dede;
+  background-color: #eaeaea;
   height: 45px;
   width: 100%;
   font-weight: bold;
@@ -471,6 +478,11 @@ main {
 .company-info__title {
   font-weight: bold;
   font-size: 25px;
+}
+.company-info__text {
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .how-it-works {
@@ -495,7 +507,7 @@ main {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: #f0ecec;
+    background-color: #f6f6f6;
   }
 }
 @media screen and (min-width: 768px) {
@@ -513,6 +525,9 @@ main {
   flex-direction: column;
   gap: 40px;
   list-style: none;
+}
+.how-it-works ol :nth-child(3) {
+  background-color: #f5edff;
 }
 .how-it-works ol :nth-child(3) i {
   color: #9356DC;
@@ -535,13 +550,12 @@ main {
   display: flex;
   align-self: center;
   border-radius: 20px;
-  height: 70px;
-  width: 340px;
+  height: 65px;
+  width: 320px;
   font-size: 15px;
   box-shadow: 0px 5px 15px 5px #bbbbbb;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
   padding-top: 25px;
-  padding-right: 50px;
 }
 .how-it-works li i {
   font-size: 20px;
@@ -553,7 +567,7 @@ main {
 .restaurants {
   width: 100%;
   min-width: 350px;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
   font-weight: bold;
   font-size: 25px;
   display: flex;
@@ -604,10 +618,9 @@ main {
 .card {
   box-shadow: 0px 5px 15px 5px #bbbbbb;
   background-color: white;
-  width: 350px;
+  width: 330px;
   height: 265px;
   border-radius: 20px;
-  font-size: 25px;
 }
 @media screen and (min-width: 768px) {
   .card {
@@ -627,7 +640,7 @@ main {
   color: green;
   position: absolute;
   top: 15px;
-  left: 235px;
+  left: 215px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -642,7 +655,7 @@ main {
   border-top-right-radius: 20px;
   height: 170px;
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 @media screen and (min-width: 768px) {
   .card img {
@@ -651,18 +664,18 @@ main {
 }
 .card h3 {
   padding: 0%;
-  font-size: 25px;
+  font-size: 21px;
 }
 .card p {
   padding: 0%;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: normal;
 }
 
 .menu {
   display: flex;
   justify-content: center;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
 }
 
 .name {
@@ -677,7 +690,7 @@ main {
   bottom: 30px;
   width: 100%;
   height: 50px;
-  background-color: #f0ecec;
+  background-color: #f6f6f6;
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
   align-items: flex-start;
@@ -692,7 +705,7 @@ main {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: #f0ecec;
+    background-color: #f6f6f6;
   }
 }
 @media screen and (min-width: 768px) {
