--- a/sass/components/_menu-items.scss
+++ b/sass/components/_menu-items.scss
@@ -1,9 +1,10 @@
 .menu-area {
-    &__fade {
 
+    padding-left: 15px;
+    &__fade {
         z-index: 2;
         position: absolute;
-        width: 107%;
+        width: 100%;
         background-color: $color-gray;
         height: 104%;
         right: -3px;
@@ -16,9 +17,7 @@
             height: 108%;
             left: -12px;
             bottom: -22px;
-
         }
-
 
         @keyframes fade-in {
             0% {
@@ -82,16 +81,12 @@
 }
 
 .food-card {
-
-
-
     overflow: hidden;
-
     @include area-shadow;
     padding-top: 8px;
     padding-left: 10px;
-    width: 350px;
-    height: 75px;
+    width: 330px;
+    height: 70px;
     border-radius: 15px;
 
     h4 {
@@ -139,17 +134,6 @@
 
 }
 
-// @keyframes animation-text {
-//     0% {
-//         width: 300px;
-//     }
-
-//     100% {
-//         width: 200px;
-//     }
-
-// }
-
 
 
 .cost {
@@ -158,9 +142,10 @@
     width: 30px;
     position: relative;
     bottom: 19px;
-    left: 290px;
+    left: 270px;
     white-space: nowrap;
     font-size: 14px;
+   
 
     i {
         font-size: 12px
@@ -169,25 +154,13 @@
 
 }
 
-// @keyframes animation-cost {
-//     0% {
-//         transform: translate(0%);
-//     }
-
-//     100% {
-//         transform: translate(-230%);
-//     }
-
-// }
-
-
 
 .card-animation {
     transition: left 1s ease;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 85px;
+    width: 65px;
     height: 75px;
     position: relative;
     bottom: 105px;
@@ -203,14 +176,8 @@
         justify-content: center;
         width: 35px;
         height: 35px;
-        font-size: 20px;
+        font-size: 12px;
         background-color: white;
-
-
-
-
-
-
 
 
         @keyframes spin {
