--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,7 +7,12 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    h2{
+        font-weight: normal;
+    }
     i{
+        width: 23px;
+        font-size: 12px;
         padding-right: 10px;
     }
 
@@ -16,8 +21,6 @@ footer {
 
 .footer__links {
     list-style: none;
-    
-
     display: flex;
     flex-direction: column;
     gap: 5px;
