--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header{
-   
-    font-size: 35px;
+    
+    font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,6 +40,7 @@
         border-radius: 20px;
         height: 330px;
         width: 100%;
+        object-fit: cover;
       
       
         @include large-screen{
