--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,31 +8,29 @@
     padding-bottom: 10px;
 }
 
-
-
 .header-menu{
-    
     display: flex;
     flex-direction: column;
     gap: 10px;
     background: linear-gradient(to bottom, white, $color-gray);
-
-   
     
     a:link{
+        position: relative;
+        right: 40px;
         color: black;
         text-decoration: none;
-       
-
     }
     a:visited{
         color: black;
 
     }
 
+   &__text{
+       padding-left: 50px;
+   }
     i{
       
-        padding-right: 50px;
+       
         font-size: 25px;
     }
     img{
