--- a/css/prefixed/style.css
+++ b/css/prefixed/style.css
@@ -61,6 +61,7 @@ html {
 }
 
 .order-button {
+  z-index: 3;
   padding-top: 30px;
   padding-bottom: 90px;
   margin-left: 190px;
@@ -87,7 +88,7 @@ html {
   font-size: 25px;
   width: 25px;
 }
-.container .heart {
+.container .heart i {
   width: 25px;
   font-size: 25.1px;
   position: absolute;
@@ -100,7 +101,7 @@ html {
   background-size: 100% 200%;
   transition: background-position 1s ease;
 }
-.container .heart:hover {
+.container .heart i:hover {
   background-position: 0 100%;
 }
 .container__like {
@@ -161,7 +162,7 @@ html {
   position: absolute;
   width: 360px;
   background-color: #f6f6f6;
-  height: 101%;
+  height: 106%;
   left: -10;
   border-width: 0px;
   animation: fade-in 1.5s 0.7s;
@@ -223,6 +224,16 @@ html {
     align-items: center;
     bottom: 0px;
     padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+.menu-area__large {
+  position: relative;
+  bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .menu-area__large {
+    bottom: 0px;
   }
 }
 
@@ -232,7 +243,7 @@ html {
   padding-top: 8px;
   padding-left: 10px;
   width: 330px;
-  height: 70px;
+  height: 60px;
   border-radius: 15px;
 }
 .food-card h4 {
@@ -357,6 +368,7 @@ html {
 }
 
 footer {
+  z-index: 3;
   height: 190px;
   width: 100%;
   background-color: #444343;
